# TransCorpus

./: .coverage  .gitignore  .pylintrc  README.md  pyproject.toml  test_splits.db  todo.md
.github/workflows/: test_suite.yml
example/: SLURM.sh  multi_GPU.sh  simple_run.sh
src/transcorpus/: __init__.py  cli.py  config.py  corpus_urls.py  data_urls.py  domains.json  fairseq_generate_wrapper.py  languages.py  models.py  preprocess.py  preview.py  retrieval.py  translate.py  translation_checkpointing.py  translation_urls.json  utils.py
tests/: test___init__.py  test_config.py  test_domains.json  test_retrieval.py  test_utils.py
