[project]
name = "transcorpus"
version = "0.1.0"
description = "This repository is designed to assist researchers looking to translate a large-scale corpus, as detailed in the TransBERT paper. The translated corpus can then be used to train a LM for example."
authors = [
    { name = "Julien Knafou", email = "julien.knafou@gmail.com" }
]
license = "MIT"
dependencies = [
    "click>=8.1.8",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pylint>=3.3.6",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[tool.rye.scripts]
ci_fmt = "rye fmt --check"
ci_pylint = "pylint src"
ci_test = "rye test"
ci = { chain = ["ci_fmt", "ci_pylint", "ci_test"]}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/transcorpus"]

[project.scripts]
transcorpus = "transcorpus.cli:cli"
