[project]
name = "transcorpus"
version = "0.1.0"
description = "This repository is designed to assist researchers looking to translate a large-scale corpus, as detailed in the TransBERT paper. The translated corpus can then be used to train a LM for example."
authors = [
    { name = "Julien Knafou", email = "julien.knafou@gmail.com" }
]
license = "MIT"
dependencies = [
    "pip<24.1",
    "click>=8.1.8",
    "requests>=2.32.3",
    "pydantic>=2.11.2",
    "tqdm>=4.67.1",
    "readchar>=4.2.1",
    "debugpy>=1.8.14",
    "nltk<3.8.2",
    "sentencepiece>=0.2.0",
    "fairseq @ git+https://github.com/facebookresearch/fairseq@ecbf110e1eb43861214b05fa001eff584954f65a",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
]
readme = "README.md"
requires-python = ">=3.7, <3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pylint>=3.3.6",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.1.0",
    "types-requests>=2.32.0.20250328",
    "types-tqdm>=4.67.0.20250404",
    "docstring-gen>=0.4.0",
    "pydocstyle>=6.3.0",
    "autopep8>=2.3.2",
    "ruff>=0.11.6",
    "docformatter>=1.7.5",
]

[tool.rye.scripts]
ci_test = "rye test"
ci_fmt = "rye fmt --check"
ci_docstring = "pydocstyle src"
ci_docstring_tests = "pydocstyle tests"
ci_mypy = "mypy src"
ci_mypy_tests = "mypy tests"
ci_pylint = "pylint src"
ci_pylint_tests = "pylint tests"
ci = { chain = ["ci_fmt", "ci_pylint", "ci_pylint_tests", "ci_test", "ci_mypy", "ci_mypy_tests", "ci_docstring", "ci_docstring_tests"]}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/transcorpus"]

[project.scripts]

transcorpus = "transcorpus.cli:cli"

[tool.ruff]
src = ["src"]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I"]

